<?xml version="1.0" encoding="utf-8"?>
<!-- Post -->
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    app:cardCornerRadius="16dp"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- HEADER -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <ImageView
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="match_parent"
                android:src="@drawable/outline_account_circle_24"
                android:contentDescription="@string/profile_picture"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/username"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/locationText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textSize="12sp"
                        android:textColor="#888888"
                        android:clickable="true"
                        android:focusable="true"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="5dp"
                        android:text="@string/middle_point"
                        android:textSize="12sp"
                        android:textColor="#888888"/>

                    <TextView
                        android:id="@+id/dateText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/datetime"
                        android:textSize="12sp"
                        android:textColor="#888888"
                        android:clickable="true"
                        android:focusable="true"/>

                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

        <!-- IMAGE -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/post_image"
            android:src="@drawable/chevoul"
            android:scaleType="centerCrop"
            android:adjustViewBounds="true"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:padding="8dp">

            <!-- LIKE -->
            <ImageButton
                android:id="@+id/likeButton"
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/like"
                app:srcCompat="@drawable/outline_favorite_24"/>

            <!-- COMMENT -->
            <ImageButton
                android:id="@+id/commentButton"
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/comment"
                app:srcCompat="@drawable/outline_chat_24"/>

            <!-- SHARE -->
            <ImageButton
                android:id="@+id/shareButton"
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/share"
                app:srcCompat="@drawable/outline_share_24"/>

            <!-- spacer -->
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <!-- SAVE -->
            <ImageButton
                android:id="@+id/saveButton"
                android:layout_width="@dimen/nav_icon_size"
                android:layout_height="match_parent"
                android:background="@android:color/transparent"
                android:contentDescription="@string/save"
                app:srcCompat="@drawable/outline_bookmark_24"/>

        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
